# ElectricEngine

./: .gitignore  CMakeLists.txt  README.md  TestGame.sln
TestGame/: Audio.cpp  Audio.h  Chunk.cpp  Chunk.h  Client.cpp  Client.h  Main.cpp  Overlay.cpp  Overlay.h  Player.h  SceneryItem.cpp  SceneryItem.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TestGame.vcxproj  TestGame.vcxproj.filters  Textures.cpp  Textures.h  Thumbs.db  Timings.cpp  Timings.h  YSElog.txt
TestGame/Debug/: vc120.idb
TestGame/Debug/TestGame.tlog/: CL.read.1.tlog  CL.write.1.tlog  TestGame.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TestGame/assets/Nalovardo/: Thumbs.db
TestGame/assets/Teide/: Thumbs.db
TestGame/assets/meshes/: Thumbs.db
TestGame/assets/meshes/derpsphere/: Thumbs.db
TestGame/assets/meshes/palm_tree_quality/: Thumbs.db
TestGame/assets/shaders/: scenery.frag  scenery.vert  terrain.frag  terrain.vert
TestGame/assets/textures/: Thumbs.db
assets/: entities.json
assets/meshes/barrel/: barrel.mtl
assets/meshes/crow/: crow.mtl
assets/meshes/fence/: fence.mtl
assets/meshes/palmtree/: palmtree.mtl  palmtree2.mtl
assets/meshes/plant/: plant.mtl
assets/meshes/rock/: rock.mtl
assets/meshes/spider/: spider.mtl  spidertex.tga
assets/meshes/well/: well.mtl
assets/shaders/: entities.frag  entities.vert  rawTexture.frag  rawTexture.vert  terrain.frag  terrain.vert
cmake/: FindJSONCpp.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
screenshots/: Thumbs.db
src/: CMakeLists.txt  Controls.cpp  Controls.hpp  Main.cpp
src/Audio/: Sound.cpp  Sound.hpp
src/Graphics/: Geometry.hpp  Grid.cpp  Grid.hpp  Mesh.cpp  Mesh.hpp  OpenGL33.hpp  Rendering.cpp  Rendering.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  tiny_obj_loader.cpp
src/Scene/: Assets.cpp  Assets.hpp  Entity.cpp  Entity.hpp  StaticProp.cpp  StaticProp.hpp  World.hpp
win/: ElectricEngine.sln
win/ElectricEngine/: ElectricEngine.vcxproj  ElectricEngine.vcxproj.filters
(+12 files in other folders)
